# ChangeLog for media-gfx/xfig
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/xfig/ChangeLog,v 1.50 2007/07/22 07:28:32 pva Exp $

  22 Jul 2007; <pva@gentoo.org> xfig-3.2.4-r3.ebuild, xfig-3.2.5-r1.ebuild:
  Removed virtual/x11 dependency.

  27 Jun 2007; <pva@gentoo.org> -files/xfig-3.2.5_alpha5-gentoo.diff,
  -files/xfig-3.2.5_alpha5-xaw3d.diff, -xfig-3.2.4-r2.ebuild:
  Cleaning old ebuild.

  27 Jun 2007; Markus Rothe <corsair@gentoo.org> xfig-3.2.5-r1.ebuild:
  Stable on ppc64; bug #183040

  26 Jun 2007; Lars Weiler <pylon@gentoo.org> xfig-3.2.5-r1.ebuild:
  Stable on ppc; bug #183040.

  25 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> xfig-3.2.5-r1.ebuild:
  Stable on sparc wrt #183040

  25 Jun 2007; Raúl Porcel <armin76@gentoo.org> xfig-3.2.5-r1.ebuild:
  alpha/x86 stable wrt #183040

  24 Jun 2007; Jeroen Roovers <jer@gentoo.org> xfig-3.2.5-r1.ebuild:
  Stable for HPPA (bug #183040).

  24 Jun 2007; Christoph Mende <angelos@gentoo.org> xfig-3.2.5-r1.ebuild:
  Stable on amd64 wrt bug 183040

  10 Jun 2007; Raúl Porcel <armin76@gentoo.org> xfig-3.2.4-r3.ebuild:
  alpha stable wrt #169475

  02 Apr 2007; <pva@gentoo.org> -xfig-3.2.5_alpha5.ebuild:
  Cleaning ebuild for alpha release.

*xfig-3.2.5-r1 (02 Apr 2007)

  02 Apr 2007; <pva@gentoo.org> metadata.xml, -xfig-3.2.5.ebuild,
  +xfig-3.2.5-r1.ebuild:
  Fixed commit strait into stable. Some other modifications mentioned in bug
  #173009.

  01 Apr 2007; Anant Narayanan <anant@gentoo.org> xfig-3.2.5.ebuild:
  Fix SRC_URI, closes bug #173009

*xfig-3.2.5 (01 Apr 2007)

  01 Apr 2007; Thilo Bangert <bangert@gentoo.org> +xfig-3.2.5.ebuild:
  version bump

  09 Mar 2007; nixnut <nixnut@gentoo.org> xfig-3.2.4-r3.ebuild:
  Stable on ppc wrt bug 169475

  08 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> xfig-3.2.4-r3.ebuild:
  Stable on sparc wrt #169475

  06 Mar 2007; Marcus D. Hanwell <cryos@gentoo.org> xfig-3.2.4-r3.ebuild: